--- a/Pogoda/Pogoda.csproj
+++ b/Pogoda/Pogoda.csproj
@@ -68,19 +68,19 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>dbWeatherDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="MainPogoda.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainPogoda.Designer.cs">
+      <DependentUpon>MainPogoda.cs</DependentUpon>
     </Compile>
     <Compile Include="GetHtml.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegEx.cs" />
     <Compile Include="SQL.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MainPogoda.resx">
+      <DependentUpon>MainPogoda.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
